--- a/chapter5-ex.css
+++ b/chapter5-ex.css
@@ -4,3 +4,128 @@
   box-sizing: border-box;
 }
 
+.clearfix::after {
+	content:"";
+	display:block;
+	clear:both;
+}
+
+header{
+	width: 100%
+	padding: 20px;
+	text-align: center;
+}
+
+header .headline{
+	font-size: 32px
+}
+
+.list{
+	padding: 15px 0;
+	margin: o auto;
+	border-bottom: 1px solid #848282;
+	border-top: 1px solid #848282;
+	text-align: center;
+}
+.list-item{
+	list-style: none;
+	display: inline-block;
+	margin: 0 20px;
+}
+.main{
+	width: 800px;
+	margin: 50px auto;
+}
+
+.box1{
+	width: 200px;
+	height: 200px;
+	background-color: #e6ffe9;
+	float: left;
+}
+
+.box2{
+	width: 200px;
+	height: 200px;
+	background-color: #cbffd3;
+	float: left;
+}
+
+.box3{
+	width: 200px;
+	height: 200px;
+	background-color: #aeffdb;
+	float: left;
+}
+
+.box4{
+	width: 200px;
+	height: 200px;
+	background-color: #93ffab;
+	float: left;
+}
+
+.box5{
+	width: 200px;
+	height: 200px;
+	background-color: #f3ffdb;
+	float: left;
+}
+
+.box6{
+	width: 200px;
+	height: 200px;
+	background-color: #edffbe;
+	float: left;
+}
+
+.box7{
+	width: 200px;
+	height: 200px;
+	background-color: #e9ffa5;
+	float: left;
+}
+
+.box8{
+	width: 200px;
+	height: 200px;
+	background-color: #e4ff8d;
+	float: left;
+}
+
+.box9{
+	width: 200px;
+	height: 200px;
+	background-color: #d9e5ff;
+	float: left;
+}
+
+.box10{
+	width: 200px;
+	height: 200px;
+	background-color: #bad3ff;
+	float: left;
+}
+
+
+.box11{
+	width: 200px;
+	height: 200px;
+	background-color: #a4c6ff;
+	float: left;
+}
+
+.box12{
+	width: 200px;
+	height: 200px;
+	background-color: #8eb8ff;
+	float: left;
+}
+
+.footertext{
+	height: 120px;
+	line-height: 120px;
+	text-align: center;
+	background-color: #848282;
+	color: #fff;
+}
