--- a/style.css
+++ b/style.css
@@ -63,14 +63,33 @@ header .headline{
 .main{
 	width: 840px;
 	margin: 0 auto;
+	padding: 70px 0;
 }
 .blog {
-  width: 600px;
+  width: 540px;
   float: left;
+  margin-right: 30px;
 }
-
+.blog-headline{
+	border-bottom: 8px solid #f7f7f7;
+	text-align: center;
+	line-height: 0.6;
+}
+.blog-item{
+	padding-bottom: 20px;
+	margin-bottom: 20px;
+	border-bottom: 1px solid #f7f7f7;
+}
+.category{
+	display: inline-block;
+	padding: 5px 8px;
+	background-color: #acabab;
+	border-radius: 3px;
+	color: #fff;
+	font-size: 11px;
+}
 .sidebar {
-  width: 240px;
+  width: 230px;
   float: left;
 }
 
