--- a/style.css
+++ b/style.css
@@ -80,6 +80,16 @@ header .headline{
 	margin-bottom: 20px;
 	border-bottom: 1px solid #f7f7f7;
 }
+.blog-image{
+	float: left;
+	height: 180px;
+}
+.blog-text{
+	float: left;
+}
+.blog-date{
+	font-size: 12px
+}
 .category{
 	display: inline-block;
 	padding: 5px 8px;
@@ -93,7 +103,7 @@ header .headline{
   float: left;
 }
 
-.footer{
+footer{
 	width: 100%;
 	height: 120px;
 	text-align: center;
