--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ header .headline{
   width: 230px;
   float: left;
 }
-.sidebar-headline, .instagram-headline, .categories-headline{
+.sidebar-headline, .instagram-headline, .categories-headline {
 	border:8px solid #f7f7f7;
 	text-align: center;
 	line-height: 0.6;
@@ -199,6 +199,52 @@ footer{
 	color:#fff;
 }
 
-.social i {
-	color: black;
+@media screen and (max-width:425px) {
+  header{
+	width: 100%;
+  }
+  .nav-list {
+    width: 100%;
+  }
+  .nav-list-item{
+    width: 100%;
+    margin: 0 0 10px 0;
+  }
+  .social {
+    display: none;
+  }
+  .main-visual-content {
+    width: 100%;
+  }
+  .main {
+    width: 100%;
+  }
+  .blog {
+    width: 100%;
+    margin: 0;
+  }
+  .blog-box {
+    padding: 0 2%;
+  }
+  .blog-image {
+    width: 49%;
+  }
+  .blog-text {
+    width: 49%;
+    padding-top: 5px;
+  }
+  .sidebar {
+    width: 100%;
+    padding: 0 3%;
+  }
+  .instagram-box {
+    width: 48%;
+    padding-top: 48%;
+  }
+  .instagram-box:nth-child(odd) {
+    margin-right: 4%;
+  }
+  .pagination {
+   margin-bottom: 50px;
+  }
 }
